@@ -1,3 +1,8 @@
+2014-11-12 belangeo <belangeo@gmail.com>
+
+    * E-Pyo: Fix marker's line numbering.
+    - rev 1267
+
 2014-11-08 belangeo <belangeo@gmail.com>
 
     * E-Pyo: Added Save As Template... menu item.
